refactored chatroom and message endpoints swagger documentation
